methods.args.MethodsArgs.scala.code
def move(stepCount: Int,goForward: Boolean){
  if (goForward){
    for (k<-1 to n){
      forward()
    }
    }else {
      for(k<-1 to n){
        backward()
      }
    }
  }
